@@ -11,7 +11,6 @@
 <script src="../lib/jquery.metadata.js" type="text/javascript"></script>
 <script src="../jquery.validate.js" type="text/javascript"></script>
 
-<script src="js/cmxforms.js" type="text/javascript"></script>
 <style type="text/css">
 .cmxform fieldset p.error label { color: red; }
 div.container {
