@@ -9,9 +9,6 @@
 <script src="../lib/jquery.js" type="text/javascript"></script>
 <script src="../jquery.validate.js" type="text/javascript"></script>
 
-<!-- for styling the form -->
-<script src="js/cmxforms.js" type="text/javascript"></script>
-
 <script type="text/javascript">
 $(document).ready(function() {
 	$("#commentForm").validate();
